--- a/t/bin-wrappers/sydbox.in
+++ b/t/bin-wrappers/sydbox.in
@@ -56,13 +56,13 @@ eexec() {
 		fi
 	elif test -n "$SYDBOX_STRACE_ENABLED"; then
 		if test -z "$SYDBOX_TEST_INSTALLED"; then
-			exec strace -f -o "$SHOEBOX_STRACE" \
+			exec strace -fto "$SHOEBOX_STRACE" \
 				$SYDBOX_STRACE_OPTIONS \
 				@BUILD_EXEC_PREFIX@ \
 				-- \
 				"$@"
 		else
-			exec strace -f -o "$SHOEBOX_STRACE" \
+			exec strace -fto "$SHOEBOX_STRACE" \
 				$SYDBOX_STRACE_OPTIONS \
 				"$@"
 		fi
