sydbox: keep improving main loop, dare to hook exit{,_group} again
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -26,6 +26,12 @@ ORIGINAL_TERM=$TERM
 # Timeouts for tests that need them.
 TIMEOUT_DURATION=60
 
+# Number of parallel processes for exit test
+EXIT_NPROC=16
+if type -P nproc; then
+	EXIT_NPROC=$(nproc)
+fi
+
 # How many threads to spawn at maximum for forking and threaded tests.
 SPAWN_MAX=64
 
