tests: quiet down nproc path lookup to fix basic test
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -28,7 +28,7 @@ TIMEOUT_DURATION=60
 
 # Number of parallel processes for exit test
 EXIT_NPROC=16
-if type -P nproc; then
+if type -P nproc >/dev/null 2>&1; then
 	EXIT_NPROC=$(nproc)
 fi
 
