build: do not add trash directories to artifact tarballs
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/.builds/x86_64-archlinux.yml
+++ b/.builds/x86_64-archlinux.yml
@@ -60,13 +60,13 @@ tasks:
     make -j V=1 check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-test.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-test.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
 #- check_strace: |
 #    cd sydbox
 #    make -j V=1 TEST_OPTIONS="--strace" check && touch .check_ok
 #    cat {syd,t}/test-suite.log || true
 #    test -e .check_ok
-#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
 #- clean_strace: |
 #    cd sydbox
 #    make clean
@@ -77,4 +77,4 @@ tasks:
 #    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
 #    cat {syd,t}/test-suite.log || true
 #    test -e .check_ok
-#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
