--- a/.builds/x86_64-alpine-edge.yml
+++ b/.builds/x86_64-alpine-edge.yml
@@ -63,7 +63,7 @@ tasks:
     make -j V=1 check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-static.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-static.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
 #- clean_strace: |
 #    rm -f .check_ok
 #    rm -fr t/test-suite.log t/test-results t/trash*
@@ -72,7 +72,7 @@ tasks:
 #    make -j V=1 TEST_OPTIONS="--strace" check && touch .check_ok
 #    cat {syd,t}/test-suite.log || true
 #    test -e .check_ok
-#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
 #- clean_valgrind: |
 #    cd sydbox
 #    rm -f .check_ok
@@ -82,7 +82,7 @@ tasks:
 #    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
 #    cat {syd,t}/test-suite.log || true
 #    test -e .check_ok
-#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
 - clean_static: |
     cd sydbox
     make clean
@@ -100,4 +100,4 @@ tasks:
     make -j V=1 check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-test.tar.bz2 config.log {syd,t}/test-suite.log t/test-results t/trash*
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-test.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
