--- a/.builds/arm64-debian-sid.yml
+++ b/.builds/arm64-debian-sid.yml
@@ -62,7 +62,7 @@ tasks:
     make -j V=1 check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-static.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-static.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
 - clean_strace: |
     cd sydbox
     rm -f .check_ok
@@ -72,7 +72,7 @@ tasks:
     make -j V=1 TEST_OPTIONS="--strace" check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
 - clean_valgrind: |
     cd sydbox
     rm -f .check_ok
@@ -82,7 +82,7 @@ tasks:
     make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
 - clean_static: |
     cd sydbox
     make clean
@@ -100,4 +100,4 @@ tasks:
     make -j V=1 check && touch .check_ok
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cjpf ../sydbox-test.tar.bz2 config.log {syd,t}/test-suite.log t/test-results
+    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-test.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
