--- a/.builds/x86_64-archlinux.yml
+++ b/.builds/x86_64-archlinux.yml
@@ -1,6 +1,6 @@
 image: archlinux
 arch: x86_64
-artifacts: [ sydbox-test.tar.bz2, sydbox-static.tar.bz2, sydbox-strace.tar.bz2, sydbox-valgrind.tar.bz2 ]
+artifacts: [ sydbox-test.tar.bz2 ]
 packages:
 - linux-headers
 - libseccomp
