build: update artifact lists, remove strace,valgrind on aarch64
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/.builds/x86_64-fedora-rawhide.yml
+++ b/.builds/x86_64-fedora-rawhide.yml
@@ -1,6 +1,6 @@
 image: fedora/rawhide
 arch: x86_64
-artifacts: [ sydbox-test.tar.bz2, sydbox-static.tar.bz2, sydbox-strace.tar.bz2, sydbox-valgrind.tar.bz2 ]
+artifacts: [ sydbox-test.tar.bz2, sydbox-static.tar.bz2 ]
 packages:
 - kernel-devel
 - kernel-headers
