--- a/.builds/arm64-debian-sid.yml
+++ b/.builds/arm64-debian-sid.yml
@@ -1,6 +1,6 @@
 image: debian/sid
 arch: arm64
-artifacts: [ sydbox-test.tar.bz2, sydbox-static.tar.bz2, sydbox-strace.tar.bz2, sydbox-valgrind.tar.bz2 ]
+artifacts: [ sydbox-test.tar.bz2, sydbox-static.tar.bz2 ]
 packages:
 - linux-headers-arm64
 - libseccomp2
@@ -63,26 +63,26 @@ tasks:
     cat {syd,t}/test-suite.log || true
     test -e .check_ok
     tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-static.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
-- clean_strace: |
-    cd sydbox
-    rm -f .check_ok
-    rm -fr t/test-suite.log t/test-results t/trash*
-- check_strace: |
-    cd sydbox
-    make -j V=1 TEST_OPTIONS="--strace" check && touch .check_ok
-    cat {syd,t}/test-suite.log || true
-    test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
-- clean_valgrind: |
-    cd sydbox
-    rm -f .check_ok
-    rm -fr t/test-suite.log t/test-results t/trash*
-- check_valgrind: |
-    cd sydbox
-    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
-    cat {syd,t}/test-suite.log || true
-    test -e .check_ok
-    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
+#- clean_strace: |
+#    cd sydbox
+#    rm -f .check_ok
+#    rm -fr t/test-suite.log t/test-results t/trash*
+#- check_strace: |
+#    cd sydbox
+#    make -j V=1 TEST_OPTIONS="--strace" check && touch .check_ok
+#    cat {syd,t}/test-suite.log || true
+#    test -e .check_ok
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-strace.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
+#- clean_valgrind: |
+#    cd sydbox
+#    rm -f .check_ok
+#    rm -fr t/test-suite.log t/test-results t/trash*
+#- check_valgrind: |
+#    cd sydbox
+#    make -j V=1 TEST_OPTIONS="--valgrind" check && touch .check_ok
+#    cat {syd,t}/test-suite.log || true
+#    test -e .check_ok
+#    tar --owner=0 --group=0 --numeric-owner --mode=go-w,go+rX -cvjpf ../sydbox-valgrind.tar.bz2 config.log {syd,t}/test-suite.log t/test-results || true
 - clean_static: |
     cd sydbox
     make clean
