--- a/syd/Makefile.am
+++ b/syd/Makefile.am
@@ -14,7 +14,7 @@ libsyd_@LIBSYD_PC_SLOT@_la_SOURCES = \
 libsyd_includedir = $(includedir)/syd-$(LIBSYD_PC_SLOT)/syd
 libsyd_include_HEADERS= syd.h
 
-noinst_HEADERS= seatest.h check.h
+noinst_HEADERS= seatest.h check.h compiler.h
 syd_check_SOURCES= seatest.c check.c file-TEST.c proc-TEST.c
 syd_check_CFLAGS= -I$(srcdir)
 syd_check_LDFLAGS= -lrt -lm \
