tests: simplify execve sandbox tests
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/t/test-lib.sh.in
+++ b/t/test-lib.sh.in
@@ -56,7 +56,8 @@ export PUBLIC_DNS_ALT
 export PUBLIC_HOST
 
 # Used for execve sandboxing test.
-TRUE_BIN=$(readlink -f "$(type -P true 2>/dev/null)")
+TRUE_BIN=$(which true)
+TRUE_BIN=$(readlink -f "${TRUE_BIN}")
 export TRUE_BIN
 
 # Test the binaries we have just built.  The tests are kept in
