autotools: add missing header to sydbox headers
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -96,6 +96,7 @@ noinst_HEADERS+= \
 		 serializer.h \
 		 sha1dc/sha1.h \
 		 sha1dc/ubc_check.h \
+		 sha1dc_syd.h \
 		 syd_seccomp_arch_default.c \
 		 sockmatch.h \
 		 sockmap.h \
