autotools: add missing script to extra dist
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,7 @@ CLEANFILES= \
 	    *.gcda \
 	    *.gcno \
 	    *.gcov
-EXTRA_DIST= syscall_open_syd.h.in
+EXTRA_DIST= syscall_open_syd.h.in syd-syscall-open.py
 noinst_HEADERS=
 
 noinst_SCRIPTS= \
