--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ chrono = "0.4"
 clap = "2.33"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tempfile = "3.2.0"
 
 [build-dependencies]
 built = {version = "0.4.4", features=["git2", "chrono"]}
