--- a/data/sydbox.bashrc.in
+++ b/data/sydbox.bashrc.in
@@ -309,9 +309,9 @@ esac
 # {{{ Prompt
 ps_sandbox() {
     if test -e /dev/sydbox; then
-        echo -e "${bashrc_colour_l_pink}>${bashrc_colour_m_gren}syd:🔑"
+        echo -e "${bashrc_colour_l_pink}>${bashrc_colour_l_pink}syd:☠"
     else
-        echo -e "${bashrc_colour_l_pink}>${bashrc_colour_m_orng}syd:🔒"
+        echo -e "${bashrc_colour_l_pink}>${bashrc_colour_m_gren}syd:✓"
     fi
 }
 
