--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ vgcore*
 #
 # git files that we don't want to ignore even it they are dot-files
 #
+!.gitattributes
 !.gitignore
 !.gitkeep
 !.gitreview
